--- a/lib/generators/infold/templates/install/app/components/admin/remote_modal_component.html.haml
+++ b/lib/generators/infold/templates/install/app/components/admin/remote_modal_component.html.haml
@@ -2,7 +2,8 @@
   .modal-dialog.modal_h100.modal-dialog-scrollable.rounded-0{ class: @remote_modal_kind }
     .modal-content.rounded-0
       .modal-header
-        = header
+        .fw-bold
+          = header
         %button.btn-close{ type: "button", data: { bs_dismiss: "modal" }, 'aria-label' => "Close" }
       = body
       = footer
