--- a/lib/generators/infold/templates/resource.yml.tt
+++ b/lib/generators/infold/templates/resource.yml.tt
@@ -6,7 +6,7 @@ model:
   enum:
   active_storage:
 app:
-  title: <%= @name %>
+  title: <%= @name.pluralize.underscore.gsub('_', ' ').upcase %>
   index:
     conditions:
       - id:
