--- a/lib/generators/infold/templates/views/index.haml.tt
+++ b/lib/generators/infold/templates/views/index.haml.tt
@@ -12,7 +12,8 @@
       = form.hidden_field :sort_field, data: { index_page_target: 'sortField' }
       = form.hidden_field :sort_kind, data: { index_page_target: 'sortKind' }
     <%- @writer.index_conditions&.each do |condition| -%>
-      .mb-3<%= @writer.condition_form_code(condition) %>
+      .mb-3
+        <%= @writer.indent(@writer.condition_form_code(condition).gsub('[TAB]', '  '), 4) %>
     <%- end -%>
       %hr.my-3
       .row.gx-2
